# translator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: claude_automator.py  pdf_builder.py  pdf_parser.py
src/gui/: main_window.py
